--- a/elrs_joy_crsf_protocol/package.xml
+++ b/elrs_joy_crsf_protocol/package.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>elrs_joy</name>
+  <name>elrs_joy_crsf_protocol</name>
   <version>0.0.0</version>
-  <description>ExpreessLRS RX to sensor_msgs/Joy driver</description>
+  <description>crsf protocol handling for ELRS</description>
   <maintainer email="alessiomorale@gmail.com">Alessio Morale</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <exec_depend>elrs_joy_crsf_node</exec_depend>
-
-  <exec_depend>elrs_joy_crsf_protocol</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
