--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,43 +4,46 @@
   "updateRemoteUserUID": true,
   "init": true,
   "build": {
-      "dockerfile": "Dockerfile",
-      "args": {
-        "USERNAME": "ubuntu"
-      }
+    "dockerfile": "Dockerfile",
+    "args": {
+      "USERNAME": "ubuntu"
+    }
   },
   "customizations": {
-      "vscode": {
-          "extensions": [
-              "ms-python.python",
-              "charliermarsh.ruff",
-              "ms-vscode.cpptools-extension-pack",
-              "ms-iot.vscode-ros",
-              "smilerobotics.urdf",
-              "redhat.vscode-xml",
-              "tamasfe.even-better-toml",
-              "timonwong.shellcheck",
-              "yzhang.markdown-all-in-one",
-              "llvm-vs-code-extensions.vscode-clangd",
-              "matepek.vscode-catch2-test-adapter"
-          ],
-          "settings": {
-              "files.associations": {
-                  "*.rviz": "yaml",
-                  "*.srdf": "xml",
-                  "*.urdf": "xml",
-                  "*.xacro": "xml"
-              }
-          }
+    "vscode": {
+      "extensions": [
+        "ms-python.python",
+        "charliermarsh.ruff",
+        "ms-vscode.cpptools-extension-pack",
+        "ms-iot.vscode-ros",
+        "smilerobotics.urdf",
+        "redhat.vscode-xml",
+        "tamasfe.even-better-toml",
+        "timonwong.shellcheck",
+        "yzhang.markdown-all-in-one",
+        "llvm-vs-code-extensions.vscode-clangd",
+        "matepek.vscode-catch2-test-adapter"
+      ],
+      "settings": {
+        "files.associations": {
+          "*.rviz": "yaml",
+          "*.srdf": "xml",
+          "*.urdf": "xml",
+          "*.xacro": "xml"
+        }
       }
+    }
   },
   "workspaceFolder": "/home/ubuntu/ros2_ws",
   "workspaceMount": "source=${localWorkspaceFolder},target=/home/ubuntu/ros2_ws/src,type=bind",
   "mounts": [
     "source=${localWorkspaceFolder}/.devcontainer/.cache/,target=/home/ubuntu/.ccache/,type=bind"
   ],
+  "containerEnv": {
+    "AMENT_CPPCHECK_ALLOW_SLOW_VERSIONS": "1"
+  },
   "postStartCommand": "/bin/bash -c 'source /opt/ros/jazzy/setup.bash && sudo apt update && cd /home/ubuntu/ros2_ws && ln -s ./src/.vscode .vscode && ln -s ./src/colcon_defaults.yaml colcon_defaults.yaml && rosdep install --from-paths src --ignore-src -r -y'",
   "runArgs": [
-      "--net=host"
-]
+    "--net=host"
+  ]
 }
